# masterpass

./: Cargo.toml  README.md  spec.md
src/: crypto.rs  lib.rs  main.rs
